--- a/src/Haqqimizda.css
+++ b/src/Haqqimizda.css
@@ -1,79 +1,7 @@
-.haqqimizda-container {
-  display: flex;
-  justify-content: center; /* Yatayda merkezleme */
-  align-items: center; /* Dikeyde merkezleme */
-  min-height: 100vh; /* Tam yükseklik */
+video {
+  object-fit: contain; /* Videonu konteynerə uyğun olaraq ölçüləndirir */
+  overflow: hidden; /* Kənar sahələri gizləyir */
+  overflow-clip-margin: content-box; /* Content-box sərhədində kəsilməni təyin edir */
+  width: 100%; /* Konteynerin tam enini tutur */
+  height: 100%; /* Konteynerin tam hündürlüyünü tutur */
 }
-
-  /* Başlık için stil */
-/* Başlık için stil */
-.header-title {
-  font-family: 'Arial', sans-serif; /* İstediğiniz yazı tipini buraya ekleyebilirsiniz */
-  color: rgba(0, 0, 0, 0.8); /* Açık siyah tonu */
-  font-size: 1.5rem; /* Daha küçük bir font boyutu */
-  font-weight: 700; /* Kalın yazı stili */
-  text-align: left; /* Sol tarafa hizalama */
-  margin-bottom: 20px; /* Alt boşluk ekleyin */
-  border-radius: 8px; /* Yuvarlak köşeler için */
-  padding: 10px; /* İç boşluk */
-  background-color: rgba(255, 255, 255, 0.1); /* Hafif beyaz arka plan */
-  display: inline-block; /* İçerik alanı kadar genişlik */
-}
-
-
-  .image-container1 {
-    position: relative;
-    width: 100%; /* Genişliği %100 yap */
-    max-width: 800px; /* Maksimum genişliği ayarlayın */
-    height: 500px; /* Yükseklik ayarlandı */
-    margin-left: 20px; /* Sağa yakınlaştırmak için margin ekle */
-    overflow: hidden;
-  }
-  
-  .slideshow-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Resmin görünümünü düzenler */
-    border-radius: 8px; /* Kenarları yuvarlar */
-  }
-  
-  /* Bronz veya açık siyah bir renk ve yuvarlak bir yazı tipi */
-.text-section .custom-text {
-  font-family: 'Arial', sans-serif; /* Eğer daha yuvarlak bir yazı tipi istiyorsanız Google Fonts'tan alternatif bir yazı tipi seçebilirsiniz */
-  color: #A67C52; /* Bu bronz bir renk örneğidir. Eğer açık siyah isterseniz #333333 kullanabilirsiniz */
-  font-size: 1.2rem; /* Font boyutunu biraz artırarak okunabilirliği artırıyoruz */
-  line-height: 1.6; /* Satırlar arasındaki boşluğu düzenliyoruz */
-  font-weight: 400; /* Font ağırlığını hafif tutarak daha yumuşak bir görünüm elde ediyoruz */
-}
-
-  h2 {
-    color: #242627; /* Açık bir ton renk */
-    font-weight: bold; /* Kalın yazı */
-    font-family: 'Arial', sans-serif; /* Yazı tipi */
-    border-radius: 8px; /* Yuvarlak kenarlar */
-  }
-  
-  body, p {
-    color: #0f0f0f; /* Açık bir ton renk */
-    font-weight: 400; /* Normal kalınlık */
-    font-family: 'Arial', sans-serif; /* Yazı tipi */
-    border-radius: 8px; /* Yuvarlak kenarlar */
-    max-width: 100%; 
-    
-    
-
-    
-
-  }
-  .about-container {
-   
-    background-size: cover; /* Resmin alanı kaplamasını sağlar */
-    background-position: center; /* Resmi ortalar */
-    background-repeat: no-repeat; /* Resmin tekrarlanmamasını sağlar */
-    min-height: 100vh; /* Yüksekliği ekranın tamamı kadar ayarla */
-    padding: 20px; /* İçerik için boşluk ekle */
-    display: flex; /* Flexbox düzeni kullan */
-    justify-content: center; /* İçerikleri yatayda ortalar */
-    align-items: center; /* İçerikleri dikeyde ortalar */
-  }
-  
